--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   animated_splash_screen: ^1.3.0
   flutter_native_splash: ^2.2.16
   http: ^0.13.5
+  shared_preferences: ^2.0.15
+
 
 dev_dependencies:
   flutter_test:
