--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_native_splash: ^2.2.16
   http: ^0.13.5
   shared_preferences: ^2.0.15
+  sqflite: ^2.2.2
+  path: ^1.8.2
 
 
 dev_dependencies:
